# flutter-todo-app

./: .gitignore  pubspec.yaml
assets/images/: README.md
backend/: pyproject.toml
backend/backend/: main.py  requirements.txt  test.py
backend/firestore-demo/: pyproject.toml
backend/firestore-demo/firestore_demo/: main.py  requirements.txt
backend/rand/: main.py
lib/: main.dart
lib/constants/: app_constants.dart
lib/widgets/: header.dart  header_action_button.dart  profile_avatar.dart
memo/: google-cloud-firestore.md  google-colude.md
