[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AmOs15",email = "amos.game1615@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "google-cloud-firestore (>=2.21.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
